add 'source-map' as 'peer' dependency

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
   "dependencies": {
     "commander": "*"
   },
+  "peerDependencies": {
+    "source-map": "~0.1.30"
+  },
   "devDependencies": {
     "mocha": "*",
     "chai": "*",
