--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "source-map": "~0.1.30"
   },
   "devDependencies": {
+    "typescript": "~0.9.1-1",
+    "grunt-ts": "https://github.com/mistaecko/grunt-ts/tarball/master",
+    "concat-sourcemaps": "https://github.com/mistaecko/concat-sourcemaps/tarball/master",
     "mocha": "*",
     "chai": "*",
     "should": "*",
